Support Java 8 and Maven 3.8.x
- Changed maven.compiler.release to maven.compiler.source/target for Java 8 compatibility
- Replaced String.strip() with String.trim() (Java 8 compatible)
- Replaced Files.readString/writeString with Files.readAllBytes/write (Java 8 compatible)
- Updated AGENTS.md to reflect Java 8 as the baseline target
- Updated Maven prerequisites and API versions to 3.8.8/3.8.0
- Updated CHANGELOG.md with Java 8 and Maven 3.8.x support notes